# pycuties

./: .gitignore  MANIFEST.in  README.md  setup.cfg
src/pycuties/: __init__.py  expandobox.py  icons.py
tests/src/: test_expandobox.py
