[metadata]
name = pycuties
version = 0.1.0
description = My playground for making nifty little Qt widgets. For now, just PyQt5.
long_description = file: README.md
long_description_content_type = text/markdown
author = ambientnuance
author_email = ambientnuance@pm.me
classifiers =
    Environment :: X11 Applications :: Qt
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS

[options]
package_dir =
    =src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    qtpy >= 1.9.0

[options.packages.find]
where = src

[options.extras_require]
pyqt5 =
    PyQt5 >= 5.15.4
tests =
    pytest
    hypothesis
